<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Product.Publish.ProductFormActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >

        <include android:id="@+id/toolbar"
            layout="@layout/tool_bar"/>

        <LinearLayout
            android:weightSum="1"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:gravity="center"
                android:layout_weight="0.1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@android:drawable/ic_menu_camera"
                    />

            </LinearLayout>
            <LinearLayout
                android:padding="12dp"
                android:layout_weight="0.9"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_marginTop="10dp"
                    android:textSize="22dp"
                    android:textStyle="bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/price"
                    />

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:orientation="vertical"
                    android:layout_height="wrap_content">
                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/price"
                        android:inputType="numberDecimal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/price"
                        />
                </android.support.design.widget.TextInputLayout>

                <TextView
                    android:layout_marginTop="10dp"
                    android:textSize="22dp"
                    android:textStyle="bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/detail"
                    />

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:orientation="vertical"
                    android:layout_height="wrap_content">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/name"
                        />
                </android.support.design.widget.TextInputLayout>


                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    app:counterEnabled="true"
                    app:counterMaxLength="200"
                    android:orientation="vertical"
                    android:layout_height="wrap_content">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/description"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/Qdescription"
                        />
                </android.support.design.widget.TextInputLayout>

                <TextView
                    android:textSize="16dp"
                    android:layout_marginBottom="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/availableQuantity"
                    />

                <com.cepheuen.elegantnumberbutton.view.ElegantNumberButton
                    android:layout_width="match_parent"
                    android:id="@+id/availableQuantity"
                    android:layout_centerVertical="true"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:layout_marginBottom="10dp"
                    android:textSize="16dp"
                    android:layout_marginTop="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/warranty"
                    />


                <me.gujun.android.taggroup.TagGroup
                    app:atg_textSize="15sp"
                    app:atg_backgroundColor="@color/colorPrimary"
                    app:atg_textColor="@color/colorSecundary"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/tag_group"
                    style="@style/TagGroup"/>

                <TextView
                    android:layout_marginTop="10dp"

                    android:textSize="16dp"
                    android:layout_marginBottom="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/condition"
                    />

                <LinearLayout
                    android:padding="10dp"
                    android:layout_width="match_parent"
                    android:orientation="horizontal"
                    android:layout_height="wrap_content">
                    <TextView
                        android:textSize="16dp"
                        android:layout_marginBottom="10dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Pnew"
                        />
                    <Switch

                        android:id="@+id/condition"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textOn="@string/Pnew"
                        android:textOff="@string/Pused"
                        />
                    <TextView
                        android:textSize="16dp"
                        android:layout_marginBottom="10dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Pused"
                        />
                </LinearLayout>

                <TextView
                    android:layout_marginTop="10dp"
                    android:textSize="22dp"
                    android:textStyle="bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/categories"
                    />






                <TextView
                    android:textSize="22dp"
                    android:textStyle="bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/location"
                    />



            </LinearLayout>


        </LinearLayout>



    </LinearLayout>

</ScrollView>
