<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    </androidx.appcompat.widget.Toolbar>

    <TextView
        android:layout_weight="0.1"
        android:layout_marginLeft="5dp"
        android:id="@+id/marketplace"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:text="@string/marketPlace"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:weightSum="1"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.SearchView
            android:layout_weight="0.9"
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:tooltipText="@string/search"
            />
        <ImageButton
            android:layout_weight="0.1"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_filters"

            />
    </LinearLayout>

    <HorizontalScrollView
        android:layout_weight="0.1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none">
        <com.google.android.material.chip.ChipGroup
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <com.google.android.material.chip.Chip
                android:gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/moda"
                />
            <com.google.android.material.chip.Chip
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/moda"
                />
            <com.google.android.material.chip.Chip
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/moda"
                />
            <com.google.android.material.chip.Chip
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/moda"
                />

        </com.google.android.material.chip.ChipGroup>

    </HorizontalScrollView>


    <FrameLayout
        android:layout_weight="2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"></FrameLayout>



    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:layout_weight="0.1"
        android:id="@+id/menu"
        android:layout_width="match_parent"
        app:menu="@menu/menu"

        android:layout_height="wrap_content">
    </com.google.android.material.bottomnavigation.BottomNavigationView>




</LinearLayout>